--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
   "author": "hector <polbarazorda@gmail.com>",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.17.1"
+    "dotenv": "^10.0.0",
+    "express": "^4.17.1",
+    "mongoose": "^6.0.9",
+    "mongoose-unique-validator": "^3.0.0"
   }
 }
